# python-file-trace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.changeset/: config.json  python-import-edge-cases.md  runpy-support.md
.github/workflows/: ci.yml  release.yml
src/: index.ts  parser.ts  resolver.ts  trace.ts  types.ts
src/python/: parse_imports.py
src/python_file_trace/: __init__.py  analyzer.py  cli.py  resolver.py  tracer.py  types.py
test/: benchmark.test.ts  trace.test.ts
test/fixtures/benchmark_fastapi/: app.py
test/fixtures/benchmark_fastapi/api/: __init__.py  deps.py  router.py
test/fixtures/benchmark_fastapi/core/: __init__.py  config.py  logging.py  security.py
test/fixtures/benchmark_fastapi/db/: __init__.py  base.py  engine.py  session.py
test/fixtures/benchmark_fastapi/middleware/: __init__.py  auth.py  (+5 more)
test/fixtures/dynamic/: another_module.py  main.py  static_module.py
test/fixtures/edge_cases/: after_multiline.py  aliased_target.py  direct_target.py  extra_module.py  fast_module.py  keyword_target.py  main.py  slow_module.py  unix_helper.py  win_helper.py
test/fixtures/package/: main.py
test/fixtures/polar_real_world/: app.py  rate_limit.py
test/fixtures/relative/: main.py
test/fixtures/runpy_cases/: aliased_target.py  keyword_module.py  main.py  target_module.py
test/fixtures/simple/: helpers.py  main.py  utils.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_resolver.py  test_tracer.py
tests/fixtures/simple_project/: main.py  utils.py
(+86 files in other folders)
